# Project-Package-of-Web-report-of-Monaco-2018-Racing

./: .gitignore  README.MD  pyproject.toml  report_gen_cli.py
report_gen/: __init__.py  reporting_gen.py
tests/: test_cli.py  test_report_gen.py
