[project]
name = "f1_q1_report_generator_df1"
version = "0.0.7"
authors = [
  { name="Daniils Fjodorovs", email="danyfed.study@gmail.com" },
]
description = "Processes log files to create a Formula 1 Q1 report"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://git.foxminded.ua/foxstudent106391/task-6-report-of-monaco-2018-racing/"
Issues = "https://git.foxminded.ua/foxstudent106391/task-6-report-of-monaco-2018-racing/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.scripts]
report-gen-cli = "report_gen_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/report_gen"]

[tool.hatch.build.targets.wheel.force-include]
"report_gen_cli.py" = "report_gen_cli.py"